deploy: 4a87b5047ed7df689f8dfb999856ab081733ba9d

--- a/index.html
+++ b/index.html
@@ -612,7 +612,7 @@
   <div class="product-modal-wrapper">
     <button class="product-modal-close" data-modal-close>
       <svg width="20" height="20">
-        <use href="./icons/icons.svg#icon-close"></use>
+        <use href="/IceCream/assets/icons-99f5c367.svg#icon-close"></use>
       </svg>
     </button>
     <h2 class="product-modal-title">Chocolate icecream</h2>
@@ -677,7 +677,9 @@
             required
           />
         </div>
-        <label for="clientcomment-product" class="visually-hidden">Comment</label>
+        <label for="clientcomment-product" class="visually-hidden"
+          >Comment</label
+        >
         <div class="product-modal-input-wrapper">
           <textarea
             class="product-modal-input"
@@ -689,7 +691,9 @@
             wrap="hard"
           ></textarea>
         </div>
-        <button class="product-modal-submit-button" type="submit">Submit</button>
+        <button class="product-modal-submit-button" type="submit">
+          Submit
+        </button>
       </form>
     </div>
   </div>
