--- a/index.html
+++ b/index.html
@@ -37,6 +37,6 @@
     {{> mobile-menu}}{{> buy-now-modal}}{{> products-modal}}{{>
     franchise-modal}}{{> our-location-modal}}{{> read-more-modal}}
     <script src="./main.js" type="module"></script>
-    <script src="./src/js/back-to-top.js"></script>
+    <script src="/src/js/back-to-top.js"></script>
   </body>
 </html>
